--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -7,13 +7,13 @@
 
             <div class="row">
                 <div class="col-md-12 ">
-                    <div class="portlet light bordered">
-                        <div class="portlet-title" style="border-bottom: 0px">
+                    <div class="portlet light bordered ">
+                        <div class="portlet-title " style="border-bottom: 0px">
                             <div class="caption green" style="font-size: 12px">
-                                <span class="caption-subject  bold "> Profile shorts :</span>
-                                <span> <input type="checkbox"/>Photo Available</span>
-                                <span> <input type="checkbox"/>Horoscope Available</span>
-                                <span> <input type="checkbox"/>On line Now</span>
+                                <span class="caption-subject profile-sort   "> Profile shorts :</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>Photo Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>Horoscope Available</span>
+                                <span> <input class="filter-check-box" type="checkbox"/>On line Now</span>
                                 <span style="margin-left:20px"> More</span>
                             </div>
                             <div class="actions">
@@ -45,9 +45,6 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="portlet-body form">
-
                         </div>
                     </div>
                     <div class="portlet light bordered">
@@ -168,7 +165,7 @@
 
                         </div>
                     </div>
-                    <div class="portlet light bordered">
+                    <div class="portlet light bordered ">
                         <div class="portlet-title" style="border-bottom: 0px">
                             <div class="caption ">
                                 <span class="caption-subject font-red-sunglo bold"> Priya Ranjini</span> <span>(P1234567)</span>
