--- a/src/app/main/dashboard/dashboard.css
+++ b/src/app/main/dashboard/dashboard.css
@@ -14,3 +14,42 @@
 
 }
 
+.profile-completeness-heading{
+    padding: 0;
+    margin: 0;
+    line-height: 13px;
+    color: #9eacb4;
+    font-size: 13px;
+    font-weight: 400;
+    color: #666;
+    padding: 10px 0;
+}
+.progress-bar-success {
+    background-color: #00AC8D !important;
+}
+.notification-navigator{
+    color: black;
+}
+.notification-navigator-disabled{
+    color: grey;
+}
+.notification-navigator i {
+
+        font-size: 20px !important;
+
+}
+.notification-navigator-disabled i {
+
+        font-size: 20px !important;
+
+}
+
+/*.progress {*/
+    /*height: 15px !important;*/
+    /*margin-bottom: 20px;*/
+    /*background-color: red !important;*/
+    /*border-radius: 4px;*/
+    /*-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);*/
+    /*box-shadow: inset 0 1px 2px rgba(0,0,0,.1);*/
+/*}*/
+
