--- a/src/app/main/dashboard/dashboard.css
+++ b/src/app/main/dashboard/dashboard.css
@@ -43,6 +43,9 @@
         font-size: 20px !important;
 
 }
+.alert-button{
+    border-radius: 10px !important;
+}
 
 /*.progress {*/
     /*height: 15px !important;*/
