--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -52,10 +52,10 @@
                                     </div>
                                     <div class="col-md-12 margin-top-20">
                                         <div class="text-center">
-                                        <button class="btn red btn-lg alert-button" type="button">
-                                            Add Details
-                                        </button>
-                                            </div>
+                                            <button class="btn red btn-lg alert-button" type="button">
+                                                Add Details
+                                            </button>
+                                        </div>
                                     </div>
 
 
@@ -69,33 +69,20 @@
                         <!-- BEGIN SAMPLE FORM PORTLET-->
                         <div class="portlet light bordered">
                             <div class="portlet-title">
+
                                 <div class="caption ">
                                     <span class="caption-subject"> Recently Updated</span>
                                 </div>
+
                                 <div class="actions">
-                                    <div class="btn-group">
-                                        <a class="btn btn-sm green dropdown-toggle" href="javascript:;"
-                                           data-toggle="dropdown"> Actions
-                                            <i class="fa fa-angle-down"></i>
-                                        </a>
-                                        <ul class="dropdown-menu pull-right">
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <i class="fa fa-pencil"></i> Edit </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <i class="fa fa-trash-o"></i> Delete </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <i class="fa fa-ban"></i> Ban </a>
-                                            </li>
-                                            <li class="divider"></li>
-                                            <li>
-                                                <a href="javascript:;"> Make admin </a>
-                                            </li>
-                                        </ul>
+                                    <div class="row">
+                                        <div class="col-md-12 page-action-navigation">
+
+                                            <span class="paginate-message"> View all</span>
+                                            <i class="fa fa-angle-left "></i>
+                                            <i class="fa fa-angle-right "></i>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -148,11 +135,14 @@
                                     <span class="caption-subject  "> New Matches</span>
                                 </div>
                                 <div class="actions">
-                                    <div class="btn-group">
-                                        <a class="btn btn-sm green dropdown-toggle" href="javascript:;"
-                                           data-toggle="dropdown"> Actions
-                                            <i class="fa fa-angle-down"></i>
-                                        </a>
+                                    <div class="row">
+                                        <div class="col-md-12 page-action-navigation">
+
+                                            <span class="paginate-message"> View all</span>
+                                            <i class="fa fa-angle-left "></i>
+                                            <i class="fa fa-angle-right "></i>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -205,11 +195,14 @@
                                     <span class="caption-subject  ">Who viewed my Profile</span>
                                 </div>
                                 <div class="actions">
-                                    <div class="btn-group">
-                                        <a class="btn btn-sm green dropdown-toggle" href="javascript:;"
-                                           data-toggle="dropdown"> Actions
-                                            <i class="fa fa-angle-down"></i>
-                                        </a>
+                                    <div class="row">
+                                        <div class="col-md-12 page-action-navigation">
+
+                                            <span class="paginate-message"> View all</span>
+                                            <i class="fa fa-angle-left "></i>
+                                            <i class="fa fa-angle-right "></i>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
