--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -1,6 +1,6 @@
 <div class="page-content-wrapper">
     <!-- BEGIN CONTENT BODY -->
-    <div class="page-content">
+    <div class="page-content1">
         <!-- BEGIN PAGE HEAD-->
         <div class="page-head">
 
@@ -96,7 +96,7 @@
                                     <div class="col-xs-7 col-sm-7 col-md-6">
                                         <div class="row ">
                                             <div class="col-md-12">
-                                                        <span><a ng-click="viewProfile(1)" class="profile-name">Priya Renjini</a>&nbsp;<span
+                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
                                                                 class="profile-id"> (PD12345)</span></span>
                                             </div>
                                         </div>
