--- a/src/app/navigation/view-profile/viewProfileNav.html
+++ b/src/app/navigation/view-profile/viewProfileNav.html
@@ -1,5 +1,5 @@
 <div class="page-sidebar-wrapper section-background">
-    <div class="page-sidebar navbar-collapse collapse" >
+    <div class="page-sidebar navbar-collapse collapse side-bar-right">
         <div class="row">
             <div class="col-md-12">
                 <ul class="page-sidebar-menu menu-panel   " data-keep-expanded="false"
@@ -10,28 +10,21 @@
                         <ul class="sub-menu">
                             <li class="nav-item  active open">
                                 <ul class="sub-menu">
-                                    <li class="nav-item nav-header">
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                            <span class="" ng-click="openLocationPreference()"><span
-                                                    class="nav-header-section-text">Similar Profiles (13)
-
-                                        </span>
-                                        </span>
-                                            </div>
-                                        </div>
+                                    <li class="nav-item nav-header-profile">
+                                        Similar Profiles (13)
                                     </li>
+                                    <hr/>
                                     <li>
-                                        <div class="row" >
+                                        <div class="row">
                                             <div class="col-md-12 margin-top-10 margin-bottom-10">
                                                 <div class="row ">
+
                                                     <div class="col-md-12">
                                                         <div class="row ">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
                                                                 <img class="imgae-circle spacer"
                                                                      ng-src="../assets/images/prof1.jpg"/>
                                                             </div>
-                                                            <div class="col-md-1 hidden-xs hidden-sm"></div>
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
@@ -56,12 +49,14 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+
+                                                    </div>
+                                                    <div class="col-md-12">
                                                         <div class="row ">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
                                                                 <img class="imgae-circle spacer"
                                                                      ng-src="../assets/images/prof1.jpg"/>
                                                             </div>
-                                                            <div class="col-md-1 hidden-xs hidden-sm"></div>
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
@@ -84,17 +79,11 @@
                                                                         <hr/>
                                                                     </div>
                                                                 </div>
-                                                                <div class="row ">
-                                                                    <div class="col-md-12">
-                                                                        <span class="send-intrest">
-                                                                            View all profiles
-                                                                        </span>
-                                                                    </div>
-                                                                </div>
                                                             </div>
                                                         </div>
+
                                                     </div>
-                                                    <!--<div class="col-md-1"></div>-->
+
                                                 </div>
                                             </div>
                                         </div>
