--- a/src/app/core/layouts/viewProfileLayout.html
+++ b/src/app/core/layouts/viewProfileLayout.html
@@ -1,6 +1,6 @@
 <div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
 <div ui-view="toolbar"></div>
-<div class="clearfix"></div>
+<!--<div class="clearfix"></div>-->
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-8">
