--- a/src/app/main/view-profile/viewProfile.css
+++ b/src/app/main/view-profile/viewProfile.css
@@ -1,8 +1,54 @@
 
 @media (min-width: 992px){
-    .page-content-wrapper .page-content1 {
-        margin-left: -45px;
+    .page-content-wrapper1{
+        width: 90%!important;
+
+    }
+
+    .page-content1 {
+        margin-left: -25px;
         margin-top: 0;
         min-height: 600px;
         padding: 10px 0 0 20px;
-    }    }
+    }
+    .side-bar-right{
+        width: 38%!important;
+    }
+
+    .nav-header-profile {
+        background-color: white !important;
+        height: 37px !important;
+        padding: 13px 14px 9px 30px !important;
+        font-size: 18px;
+    }
+}
+
+.vp-main{
+    font-size: 22px;
+    font-weight: bold;
+}
+.vp-main-sub{
+    font-size: 11px;
+}
+
+.profile-table tbody tr td{
+    padding: 6px;
+}
+
+.profile-table tbody tr .first-row{
+color: lightblue;
+font-size: 18px}
+
+.profile-table tbody tr .third-row{
+color: #363636;
+font-size: 16px}
+
+.vp-image{
+    width: 230px;height: 280px
+}
+.vp-main-action{
+    margin-left: -20px!important;
+    margin-right: -20px!important;
+    margin-bottom: -30px!important;
+    margin-top: 10px!important;
+}
