--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -1,4 +1,4 @@
-<div class="page-content-wrapper">
+<div class="page-content-wrapper page-content-wrapper1" >
     <!-- BEGIN CONTENT BODY -->
     <div class="page-content1">
         <!-- BEGIN PAGE HEAD-->
@@ -9,126 +9,110 @@
             <div class="row">
 
                 <div class="col-md-12 ">
-                    <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="col-md-12 ">
-                        <div class="portlet light bordered">
-                            <div class="portlet-body form">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <span class="profile-completeness-heading"> Profile Completeness</span>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <uib-progressbar class="profile-progress-bar" animate="true"
-                                                                 value="dynamic"
-                                                                 type="success"><b>10%</b></uib-progressbar>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr/>
-                                    <div class="col-md-12 margin-top-10">
-                                        <div class="row">
-                                            <div class="col-md-1 col-sm-1 col-xs-1">
-                                        <span ng-class="isFirstMessage()?'notification-navigator-disabled':'notification-navigator'">
-                                             <i class="fa fa-angle-left " ng-click="loadPreviosMessage()"></i>
-                                        </span>
-
-                                            </div>
-                                            <div class="hidden-md hidden-lg col-sm-1 col-xs-1"></div>
-                                            <div class="col-md-10 col-sm-8 col-xs-8">
-                                                <span>
-                                                <b>{{messages[messageIndex]}}</b>
-                                                </span>
-
-                                            </div>
-                                            <div class="hidden-md hidden-lg col-sm-1 col-xs-1"></div>
-                                            <div class="col-md-1 col-sm-1 col-xs-1">
-                                    <span ng-class="isLastMessage()?'notification-navigator-disabled':'notification-navigator'">
-                                             <i class="fa fa-angle-right " ng-click="loadNextMessage()"></i>
-                                        </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 margin-top-20">
-                                        <div class="text-center">
-                                            <button class="btn red btn-lg alert-button" type="button">
-                                                Add Details
-                                            </button>
-                                        </div>
-                                    </div>
-
-
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
 
                     <div class="col-md-12 ">
-                        <!-- BEGIN SAMPLE FORM PORTLET-->
+
                         <div class="portlet light bordered">
                             <div class="portlet-title">
 
                                 <div class="caption ">
-                                    <span class="caption-subject"> Recently Updated</span>
+                                    <span class="vp-main"> Priya Rajani</span><br>
+                                    <span class="vp-main-sub"> Profile created by parents</span>
                                 </div>
 
-                                <div class="actions">
-                                    <div class="row">
-                                        <div class="col-md-12 page-action-navigation">
+                                <div class="actions" style="font-size: 20px">
+                                    <i class="fa fa-ellipsis-v"></i>
 
-                                            <span class="paginate-message"> View all</span>
-                                            <i class="fa fa-angle-left "></i>
-                                            <i class="fa fa-angle-right "></i>
-
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="portlet-body form">
                                 <div class="row ">
-                                    <div class=" col-xs-3 col-sm-3 col-md-2 ">
-                                        <img class="imgae-circle"
-                                             ng-src="../assets/images/prof1.jpg"/>
+                                    <div class=" col-xs-12 col-sm-6 col-md-4 ">
+                                        <img class="vp-image" ng-src="../assets/images/profile2.jpg"/>
                                     </div>
-                                    <div class="col-xs-1 col-sm-1 hidden-md hidden-lg"></div>
-                                    <div class="col-xs-7 col-sm-7 col-md-6">
-                                        <div class="row ">
-                                            <div class="col-md-12">
-                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
-                                                                class="profile-id"> (PD12345)</span></span>
-                                            </div>
-                                        </div>
-                                        <div class="row ">
-                                            <div class="col-md-12">
-                                                                        <span class="profile-details">
-                                                                            25,5.3cms,Tamil,Hindu,Manal Tamilnadu, India
-                                                                        </span>
-                                            </div>
-                                        </div>
-                                        <div class="row ">
-                                            <div class="col-md-12">
-                                                <div style="margin-top:20px"><a
-                                                        style="font-size:13px;color: red;margin-right: 20px"> Send
-                                                    Interest</a><a style="font-size:13px;color: red"> View Profile</a>
-                                                </div>
+                                    <div class="col-xs-7 col-sm-6 col-md-6">
+                                        <div class="row " style="">
+                                           <table class="profile-table">
+                                               <tbody style="padding: 20px!important;">
+                                               <tr>
+                                                   <td width="10%"></td>
+                                                   <td width="5%"></td>
+                                                   <td width="75%"></td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="icon-user-follow"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">22 yrs,5`7</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="icon-book-open"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Tamil</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="icon-users"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Vaniyakullak Kshathriya</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="fa fa-star"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Swathi</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="fa fa-graduation-cap"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Btech</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="fa fa-briefcase"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Software engineer</td>
+                                               </tr>
+                                               <tr>
+                                                   <td class="first-row"><i class="fa fa-map-marker"></i></td>
+                                                   <td class="second-row">|</td>
+                                                   <td class="third-row">Bangalore</td>
+                                               </tr>
+                                               </tbody>
+                                           </table>
 
-                                                <hr/>
-                                            </div>
+
+
                                         </div>
+
                                     </div>
                                     <div class="col-md-2 hidden-xs hidden-sm"></div>
                                 </div>
 
 
                             </div>
+                            <div class=" row vp-main-action" >
+                                <div style="text-transform: uppercase;text-align: center;">
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-star-o"></i> Shortlist
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                        <i class="fa fa-phone"></i> Call now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-commenting-o"></i> Chat now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
+                                    </div>
+
+                                </div>
+                            </div>
+
                         </div>
 
-                    </div>
 
-                    <div class="col-md-12 ">
-                        <!-- BEGIN SAMPLE FORM PORTLET-->
+
                         <div class="portlet light bordered">
                             <div class="portlet-title">
                                 <div class="caption ">
@@ -185,10 +169,6 @@
                             </div>
                         </div>
 
-                    </div>
-
-                    <div class="col-md-12 ">
-                        <!-- BEGIN SAMPLE FORM PORTLET-->
                         <div class="portlet light bordered">
                             <div class="portlet-title">
                                 <div class="caption ">
