--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -1,4 +1,4 @@
-<div class="page-content-wrapper page-content-wrapper1" >
+<div class="page-content-wrapper page-content-wrapper1">
     <!-- BEGIN CONTENT BODY -->
     <div class="page-content1">
         <!-- BEGIN PAGE HEAD-->
@@ -32,51 +32,50 @@
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6">
                                         <div class="row " style="">
-                                           <table class="profile-table">
-                                               <tbody style="padding: 20px!important;">
-                                               <tr>
-                                                   <td width="10%"></td>
-                                                   <td width="5%"></td>
-                                                   <td width="75%"></td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="icon-user-follow"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">22 yrs,5`7</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="icon-book-open"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Tamil</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="icon-users"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Vaniyakullak Kshathriya</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="fa fa-star"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Swathi</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="fa fa-graduation-cap"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Btech</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="fa fa-briefcase"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Software engineer</td>
-                                               </tr>
-                                               <tr>
-                                                   <td class="first-row"><i class="fa fa-map-marker"></i></td>
-                                                   <td class="second-row">|</td>
-                                                   <td class="third-row">Bangalore</td>
-                                               </tr>
-                                               </tbody>
-                                           </table>
-
+                                            <table class="profile-table">
+                                                <tbody style="padding: 20px!important;">
+                                                <tr>
+                                                    <td width="10%"></td>
+                                                    <td width="5%"></td>
+                                                    <td width="75%"></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="icon-user-follow"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">22 yrs,5`7</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="icon-book-open"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Tamil</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="icon-users"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Vaniyakullak Kshathriya</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="fa fa-star"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Swathi</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="fa fa-graduation-cap"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Btech</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="fa fa-briefcase"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Software engineer</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="first-row"><i class="fa fa-map-marker"></i></td>
+                                                    <td class="second-row">|</td>
+                                                    <td class="third-row">Bangalore</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
 
 
                                         </div>
@@ -85,32 +84,36 @@
                                     <div class="col-md-2 hidden-xs hidden-sm"></div>
                                 </div>
 
+                                <div class="row">
+                                    <div class="col-md-12 vp-sub-action" >
+                                      <span>Connect her with ?</span>
+                                        <button class="btn red">YES</button>
+                                        <button class="btn ">SKIP</button>
+                                    </div>
+                                </div>
+
 
                             </div>
-                            <div class=" row vp-main-action" >
+                            <div class=" row vp-main-action">
                                 <div style="text-transform: uppercase;text-align: center;">
-                                    <div class="col-md-3"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                    <div class="col-md-4 vp-main-link"
+                                            ><i
                                             class="fa fa-star-o"></i> Shortlist
                                     </div>
-                                    <div class="col-md-3"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                    <div class="col-md-4 vp-main-link"
+                                            >
                                         <i class="fa fa-phone"></i> Call now
                                     </div>
-                                    <div class="col-md-3"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                    <div class="col-md-4 vp-main-link"
+                                            ><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
-                                    <div class="col-md-3"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                    </div>
+
 
                                 </div>
                             </div>
 
                         </div>
-
 
 
                         <div class="portlet light bordered">
