matches, search results style changes

--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -144,7 +144,7 @@
                                 </div>
 
                             </div>
-                            <div class="row" style="text-transform: uppercase;text-align: center;">
+                            <div class="row vp-main-action" >
                                 <div class="col-md-3"
                                      style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                         class="fa fa-star-o"></i> Shortlist
@@ -262,7 +262,7 @@
                                 </div>
 
                             </div>
-                            <div class="row" style="text-transform: uppercase;text-align: center;">
+                            <div class="row vp-main-action" >
                                 <div class="col-md-3"
                                      style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                         class="fa fa-star-o"></i> Shortlist
@@ -380,7 +380,7 @@
                                 </div>
 
                             </div>
-                            <div class="row" style="text-transform: uppercase;text-align: center;">
+                            <div class="row vp-main-action" >
                                 <div class="col-md-3"
                                      style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                         class="fa fa-star-o"></i> Shortlist
