--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -146,7 +146,7 @@
                                 </div>
 
                             </div>
-                            <div class=" row" style="margin-left: -20px;margin-right: -20px;margin-bottom: -30px;margin-top: 10px">
+                            <div class=" row vp-main-action" >
                                 <div style="text-transform: uppercase;text-align: center;">
                                     <div class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
@@ -267,7 +267,7 @@
                                 </div>
 
                             </div>
-                            <div class=" row" style="margin-left: -20px;margin-right: -20px;margin-bottom: -30px;margin-top: 10px">
+                            <div class=" row vp-main-action">
                                 <div style="text-transform: uppercase;text-align: center;">
                                     <div class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
@@ -387,7 +387,7 @@
                                 </div>
 
                             </div>
-                            <div class=" row" style="margin-left: -20px;margin-right: -20px;margin-bottom: -30px;margin-top: 10px">
+                            <div class=" row vp-main-action" >
                                 <div style="text-transform: uppercase;text-align: center;">
                                     <div class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
