--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -144,24 +144,26 @@
                                 </div>
 
                             </div>
-                            <div class="row vp-main-action" >
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-star-o"></i> Shortlist
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
-                                    <i class="fa fa-phone"></i> Call now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-commenting-o"></i> Chat now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                        class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                </div>
+                            <div class=" row vp-main-action" >
+                                <div style="text-transform: uppercase;text-align: center;">
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-star-o"></i> Shortlist
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                        <i class="fa fa-phone"></i> Call now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-commenting-o"></i> Chat now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
+                                    </div>
 
+                                </div>
                             </div>
 
                         </div>
@@ -262,24 +264,26 @@
                                 </div>
 
                             </div>
-                            <div class="row vp-main-action" >
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-star-o"></i> Shortlist
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
-                                    <i class="fa fa-phone"></i> Call now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-commenting-o"></i> Chat now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                        class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                </div>
+                            <div class=" row vp-main-action" >
+                                <div style="text-transform: uppercase;text-align: center;">
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-star-o"></i> Shortlist
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                        <i class="fa fa-phone"></i> Call now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-commenting-o"></i> Chat now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
+                                    </div>
 
+                                </div>
                             </div>
 
                         </div>
@@ -380,24 +384,26 @@
                                 </div>
 
                             </div>
-                            <div class="row vp-main-action" >
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-star-o"></i> Shortlist
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
-                                    <i class="fa fa-phone"></i> Call now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
-                                        class="fa fa-commenting-o"></i> Chat now
-                                </div>
-                                <div class="col-md-3"
-                                     style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                        class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                </div>
+                            <div class=" row vp-main-action" >
+                                <div style="text-transform: uppercase;text-align: center;">
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-star-o"></i> Shortlist
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                        <i class="fa fa-phone"></i> Call now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-commenting-o"></i> Chat now
+                                    </div>
+                                    <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
+                                    </div>
 
+                                </div>
                             </div>
 
                         </div>
