--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -115,6 +115,24 @@
 
                         </div>
 
+                        <div class="portlet light "
+                                style="padding-top: 0px">
+
+                            <div class=" row vp-main-action">
+                                <div style="text-transform: uppercase;text-align: center;">
+                                    <div class="col-md-6 vp-main-link2 active-link"
+                                            > Personal Information
+                                    </div>
+                                    <div class="col-md-6 vp-main-link2"> Parter Preferences
+                                    </div>
+
+
+
+                                </div>
+                            </div>
+
+                        </div>
+
 
                         <div class="portlet light bordered">
                             <div class="portlet-title">
