--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -156,7 +156,7 @@
                                     <div class="col-xs-7 col-sm-7 col-md-6">
                                         <div class="row ">
                                             <div class="col-md-12">
-                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
+                                                        <span><a ui-sref="viewProfile" class="profile-name">Priya Renjini</a>&nbsp;<span
                                                                 class="profile-id"> (PD12345)</span></span>
                                             </div>
                                         </div>
@@ -216,7 +216,7 @@
                                     <div class="col-xs-7 col-sm-7 col-md-6">
                                         <div class="row ">
                                             <div class="col-md-12">
-                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
+                                                        <span><a ui-sref="viewProfile" class="profile-name">Priya Renjini</a>&nbsp;<span
                                                                 class="profile-id"> (PD12345)</span></span>
                                             </div>
                                         </div>
